nuxeo/01-arai-nuxeo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    service: arai-nuxeo
  name: arai-nuxeo
spec:
  serviceName: "arai-nuxeo"
  replicas: 1
  selector:
    matchLabels:
      app: arai-nuxeo
  template:
    metadata:
      labels:
        app: arai-nuxeo
    spec:
      imagePullSecrets: 
       - name: uner-registry
      containers:
      - name: arai-nuxeo
        image: registry.uner.edu.ar:5000/nuxeo-uner:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nuxeo-storage
          mountPath: /var/lib/nuxeo/data
          subPath: nuxeo
        resources: {}
      restartPolicy: Always 
      volumes:
        - name: "nuxeo-storage"
          persistentVolumeClaim:
            claimName: "nuxeo-storage"
