nuxeo/02-arai-nuxeo-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: arai-nuxeo-svc
spec:
  selector:
    app: arai-nuxeo
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: nuxeo-lb
  annotations:
    metallb.universe.tf/address-pool: default
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    role: arai-nuxeo
